# Stupid-Simple-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  run_cmake.sh
src/: Dependencies.hpp  Entry.hpp  Ssgui.hpp
src/ui/: Application.cpp  Application.hpp  Core.hpp  ElementsDrags.cpp  ElementsGeneral.cpp  ElementsStyled.cpp  Entry.hpp  General.cpp  General.hpp  GuiElements.cpp  GuiElements.hpp  Image.cpp  Image.hpp  ImguiControlls.cpp  ImguiControlls.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp  Style.hpp  Vector.hpp  Window.cpp  Window.hpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  ssgui_test
test/src/: TestApp.cpp  TestApp.hpp
